<package>
  <name>perception_pcl_c11</name>
  <version>1.4.5</version>
  <description>

  PCL (Point Cloud Library) ROS interface stack. PCL-ROS is the preferred
  bridge for 3D applications involving n-D Point Clouds and 3D geometry
  processing in ROS.

  </description>
  <author>Open Perception</author>
  <author email="william@osrfoundation.org">William Woodall</author>
  <author email="julius@kammerl.de">Julius Kammerl</author>
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/perception_pcl</url>
  <url type="bugtracker">https://github.com/ros-perception/perception_pcl/issues</url>
  <url type="repository">https://github.com/ros-perception/perception_pcl</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pcl_conversions_c11</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_ros_c11</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
